fixed slider on mobile

--- a/media/css/mkt/slider.less
+++ b/media/css/mkt/slider.less
@@ -34,6 +34,7 @@
         pointer-events: none;
         background: fadeOut(@white, 75%);
         z-index: 1;
+        outline: 0;
         &.show {
             opacity: 1;
             pointer-events: auto;
